Don't copy tmp file to dl-folder in case consumer failed. Changed the way how tmp files are stored in dl-folder, this maybe fixes the authorization bug in windows.